<resources>
    <string name="app_name">ITRC test</string>
    <string name="company_info">©2022 Gachon Cognitive Computing Lab</string>
    <string name="empty_description" />
    <string name="greetings_2">개인 맞춤형 문진 서비스 사용 것을 환영합니다.</string>
    <string name="greetings_1">반갑습니다.</string>
    <string name="title">GACHON ITRC</string>
    <string name="subtitle">스마트 개인맞춤형 문진서비스</string>
    <string name="guide">개인 맞춤형 문진 서비스 사용안내</string>
    <string name="question_title">스마트 문진 질문</string>
    <string name="step_1_title">Step 1. 문진안내</string>
    <string name="step_2_title">Step 2. 문진</string>
    <string name="guide_warning_close">조금만 뒤로 가세요!</string>
    <string name="guide_warning_far">조금만 앞으로 오세요.</string>
    <string name="guide_warning_gone">측정불가!</string>
    <string name="loading_text_1"> 개인 맞춤형 문진 </string>
    <string name="loading_text_2">개인 맞춤형 문진 서비스를 시작합니다.</string>
    <string name="loading_progress_text">%d초 후 이동합니다.</string>
    <string name="step_title">현재 진행상황</string>
    <string name="voice_title">음성인식 시스템</string>
    <string name="sensor_title">비접축 생체 센서 결과</string>
    <string name="voice_text"> 개인 맞춤형 문진\n서비스는 버튼 선택으로 진행됩니다.</string>
    <string name="step_1_text">문진안내</string>
    <string name="step_2_text">개인 맞춤형 문진</string>
    <string name="step_3_text">진단결과</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="temperature">체온</string>
    <string name="respiration">호흡</string>
    <string name="heart_rate">심박수</string>
    <string name="rpm_unit">Rpm</string>
    <string name="bpm_unit">Bpm</string>
    <string name="result_title">개인 맞춤형 문진 서비스 진단결과</string>
    <string name="normal">정상</string>
    <string name="abnormal">전문가 상담이 필요합니다.</string>
    <string name="result_normal">문진과 결합한 생체신호 측정 결과는 정상입니다. </string>
    <string name="prevention_title">코로나 감염확산 예방법</string>
    <string name="prevention_text">감염확산 방지에 동참해 주세요.</string>
    <string name="mask_text">마스크 착용</string>
    <string name="hand_text">30초 손 씻기</string>
    <string name="disinfection_text">소독 자주하기</string>
    <string name="distance_text">거리두기</string>
    <string name="back_home">처음으로 돌아가기</string>
    <string name="back_home1">생체신호 모니터링</string>
    <string name="guide_mask">마스크 착용은 필수입니다.</string>
    <string name="guide_fit">측정 중에 움직이지 마세요!</string>
    <string name="guide_voice">음성검진 시스템입니다.</string>
    <string name="guide_focus">화면을 선택해주세요.</string>
    <string name="emergency_text">전문가 상담이 필요합니다.</string>
    <string name="qr_code_text">다음 화면 QR code를 확인해주세요.</string>
    <string name="abnormal_qr">선별진료소 Scan QR Code</string>
    <string name="abnormal_qr_text">마스크를 착용 후, 사람이 없는 곳을 이용해\n즉시 선별진료소로 이동해주시기 바랍니다.\nQR code를 확인해 주변 선별진료소로 빠르게\n이동해주세요.</string>
    <string name="warning_sensor_1">측정 중…</string>
    <string name="warning_sensor_2">측정 중에 움직이지 마세요.</string>
    <string name="error_network_disconnection">네트워크 연결오류</string>
    <string name="error_network_disconnection_2">네트워크 연결실패</string>
    <string name="error_sensor_disconnection">센서 연결오류</string>
    <string name="error_sensor_disconnection_2">센서 연결실패</string>
    <string name="sensor_calibration">보정</string>
    <string name="sensor_exit">종료</string>
    <string name="prev_answer">이전 답변&#160;&#160;|&#160;&#160;</string>
    <string name="prev_answer_help">답변은 음성인식만 가능합니다. 돌아가시려면 “이전으로” 말씀해주세요.</string>
    <string name="answer_example">&#160;ex) 예시답변</string>
    <string name="answer_right">맞습니다</string>
    <string name="answer_age_1">삼십살</string>
    <string name="answer_age_2">삼십세</string>
    <string name="answer_or">또는</string>
    <string name="answer_text">으로 답변하세요.</string>
    <string name="answer_gender_male">남자</string>
    <string name="answer_gender_female">여자</string>
    <string name="answer_location">서울시 강남구</string>
    <string name="answer_wrong">틀립니다</string>
    <string name="answer_times_1">영회</string>
    <string name="answer_times_2">확인</string>
    <string name="answer_yes">있음</string>
    <string name="answer_no">없음</string>
</resources>