<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isVisible"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{isVisible ? View.VISIBLE : View.GONE}"
        tools:layout_height="65dp"
        tools:layout_width="1094dp">

        <TextView
            android:id="@+id/textView34"
            android:layout_width="428dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_answer"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/answer_age_1"
            android:textColor="#415070"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView36"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:lineSpacingExtra="10sp"
            android:text="@string/answer_or"
            android:textColor="@color/dusk"
            android:textSize="24sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView35"
            app:layout_constraintStart_toEndOf="@+id/textView34"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="428dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_answer"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/answer_age_2"
            android:textColor="#415070"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView37"
            app:layout_constraintStart_toEndOf="@+id/textView36"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:lineSpacingExtra="10sp"
            android:text="@string/answer_text"
            android:textColor="@color/dusk"
            android:textSize="24sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView35"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>