<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".intro.IntroFragment">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="236dp"
            android:layout_height="231dp"
            android:contentDescription="@string/empty_description"
            android:src="@drawable/gachon_logo2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/greetings_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="400dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingExtra="20sp"
            android:text="@string/greetings_1"
            android:textColor="#111111"
            android:textSize="60sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/greetings_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/greetings_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:lineSpacingExtra="20sp"
            android:text="@string/greetings_2"
            android:textColor="#111111"
            android:textSize="48sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/greetings_1"
            app:layout_constraintTop_toBottomOf="@+id/greetings_1" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginBottom="80dp"
            android:contentDescription="@string/empty_description"
            android:src="@drawable/gachon_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/company_info"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>