<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.iitp.signagekiosk.loading.LoadingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".questionnaire.QuestionnaireFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_container"
            android:layout_width="663dp"
            android:layout_height="67dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="67dp"
                android:layout_height="67dp"
                android:contentDescription="@string/empty_description"
                android:src="@drawable/gachon_logo2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/premier_league"
                android:text="@string/title"
                android:textColor="@color/navy"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="418dp"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/subtitle"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/progress_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:constraint_referenced_ids="ic_loading, progress_container"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/ic_loading"
            android:layout_width="378dp"
            android:layout_height="366dp"
            android:layout_marginStart="50dp"
            android:contentDescription="@string/empty_description"
            android:src="@drawable/ic_loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progress_container"
            android:layout_width="737dp"
            android:layout_height="361dp"
            android:layout_marginStart="77dp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_loading"
            app:layout_constraintStart_toEndOf="@+id/ic_loading"
            app:layout_constraintTop_toTopOf="@+id/ic_loading">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:textSize="52sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/progressBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/loading_text_2"
                android:textColor="@color/black"
                android:textSize="42sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/textView6" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_marginTop="50dp"
                android:max="@{viewModel.progressMax}"
                android:progress="@{viewModel.progress}"
                android:progressBackgroundTint="@color/very_light_pink_three"
                android:progressTint="@color/lightish_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:progress="50" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                android:text="@{@string/loading_progress_text(viewModel.remainSecond)}"
                android:textColor="@color/brownish_grey"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/progressBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"
                tools:text="@string/loading_progress_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>