<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.iitp.signagekiosk.questionnaire.QuestionnaireViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/normal"
        android:layout_width="600dp"
        android:layout_height="800dp"
        android:background="#eff0f2"
        tools:layout_width="1258dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="150dp"
            android:background="@drawable/bg_home_button"
            android:onClick="testButtonClicked5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4">

            <ImageView
                android:id="@+id/imageView111"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/empty_description"
                android:src="@drawable/monitor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView241"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView241"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/back_home1"
                android:textColor="@color/dark_grey_blue"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView111"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView111"
                app:layout_constraintTop_toTopOf="@+id/imageView111" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="76dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/result_title"
            android:textColor="@color/dusk"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="240dp"
            android:contentDescription="@string/empty_description"
            android:src="@drawable/ic_normal_shield"
            app:layout_constraintEnd_toStartOf="@+id/textView19"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/normal"
            android:textColor="@color/dark_grey"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="문진과 결합한 생체신호 측정 결과는 정상입니다. "
            android:textColor="@color/black_two"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />
        <TextView
            android:id="@+id/textView201"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@{viewModel.normalanswer}"
            android:textColor="@color/black_two"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />
        <TextView
            android:id="@+id/textView202"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@{viewModel.normalanswer1}"
            android:textColor="@color/black_two"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView201" />
        <TextView
            android:id="@+id/textView203"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@{viewModel.normalanswer2}"
            android:textColor="@color/black_two"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView202" />

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="150dp"
            android:background="@color/very_light_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="150dp"
            android:background="@drawable/bg_home_button"
            android:onClick="@{v -> viewModel.onClickToHome()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/empty_description"
                android:src="@drawable/ic_home_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView24"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/back_home"
                android:textColor="@color/dark_grey_blue"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="@+id/imageView11" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>